--- a/FindElectricity/FEMap/View/FEShopPopView.xib
+++ b/FindElectricity/FEMap/View/FEShopPopView.xib
@@ -17,9 +17,21 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZIz-u1-M9l">
                     <rect key="frame" x="10" y="34" width="315" height="131"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="map_to" translatesAutoresizingMaskIntoConstraints="NO" id="mUh-gP-A58">
-                            <rect key="frame" x="16" y="11" width="66" height="66"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yQg-rC-wH0">
+                            <rect key="frame" x="10" y="2" width="297" height="80"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="80" id="jsO-bM-07p"/>
+                            </constraints>
+                            <connections>
+                                <action selector="btnAct:" destination="kzE-BL-Nhg" eventType="touchUpInside" id="G70-BC-1fq"/>
+                            </connections>
+                        </button>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map_to" translatesAutoresizingMaskIntoConstraints="NO" id="mUh-gP-A58">
+                            <rect key="frame" x="10" y="10" width="66" height="66"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="66" id="ash-0I-tzc"/>
+                                <constraint firstAttribute="height" constant="66" id="uea-cO-CXg"/>
+                            </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                     <integer key="value" value="6"/>
@@ -27,30 +39,38 @@
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                             </userDefinedRuntimeAttributes>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="维修店" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s2n-CI-Qin">
-                            <rect key="frame" x="97" y="20" width="34" height="14"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="维修店" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s2n-CI-Qin">
+                            <rect key="frame" x="82" y="20" width="223" height="17"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="17" id="ahK-8G-B4A"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="营业时间：8:00-24:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wTr-ko-67L">
-                            <rect key="frame" x="96" y="37" width="107" height="12"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="营业时间：8:00-24:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wTr-ko-67L">
+                            <rect key="frame" x="82" y="38" width="223" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="15" id="z6P-vq-boS"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="地址：长沙市开福区万达广场" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k41-jU-Lg1">
-                            <rect key="frame" x="96" y="53" width="133" height="12"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地址：长沙市开福区万达广场" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k41-jU-Lg1">
+                            <rect key="frame" x="82" y="55" width="223" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="15" id="e2J-u4-JAF"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UuS-dg-UPf">
-                            <rect key="frame" x="16" y="90" width="50" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UuS-dg-UPf">
+                            <rect key="frame" x="20" y="90" width="64" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="Rno-KS-uZX"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <state key="normal" title=" 收藏" image="map_attion">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -59,9 +79,11 @@
                                 <action selector="btnAct:" destination="kzE-BL-Nhg" eventType="touchUpInside" id="3xS-XM-f56"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6v5-h1-1LO">
-                            <rect key="frame" x="88" y="90" width="50" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6v5-h1-1LO">
+                            <rect key="frame" x="94" y="90" width="63.5" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="94f-7y-aQj"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <state key="normal" title=" 纠错" image="map_error">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -70,9 +92,11 @@
                                 <action selector="btnAct:" destination="kzE-BL-Nhg" eventType="touchUpInside" id="Ltp-4W-Duo"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l18-vU-I9r">
-                            <rect key="frame" x="167" y="90" width="50" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l18-vU-I9r">
+                            <rect key="frame" x="167.5" y="90" width="64" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="B60-Ea-OaG"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <state key="normal" title=" 路线" image="map_line">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -81,9 +105,11 @@
                                 <action selector="btnAct:" destination="kzE-BL-Nhg" eventType="touchUpInside" id="7pe-6Q-CwD"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2v-r0-uss">
-                            <rect key="frame" x="239" y="90" width="50" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2v-r0-uss">
+                            <rect key="frame" x="241.5" y="90" width="63.5" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="LzK-9C-sw6"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <state key="normal" title=" 电话" image="map_phone">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -92,21 +118,40 @@
                                 <action selector="btnAct:" destination="kzE-BL-Nhg" eventType="touchUpInside" id="8Mm-Yi-Urx"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yQg-rC-wH0">
-                            <rect key="frame" x="16" y="2" width="291" height="80"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <connections>
-                                <action selector="btnAct:" destination="kzE-BL-Nhg" eventType="touchUpInside" id="G70-BC-1fq"/>
-                            </connections>
-                        </button>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="k41-jU-Lg1" firstAttribute="leading" secondItem="s2n-CI-Qin" secondAttribute="leading" id="6XJ-GM-w4t"/>
+                        <constraint firstItem="6v5-h1-1LO" firstAttribute="leading" secondItem="UuS-dg-UPf" secondAttribute="trailing" constant="10" id="8bz-6Q-yAy"/>
+                        <constraint firstItem="j2v-r0-uss" firstAttribute="width" secondItem="UuS-dg-UPf" secondAttribute="width" id="BRD-uJ-ueR"/>
+                        <constraint firstItem="k41-jU-Lg1" firstAttribute="top" secondItem="wTr-ko-67L" secondAttribute="bottom" constant="2" id="Dlg-uZ-31W"/>
+                        <constraint firstItem="UuS-dg-UPf" firstAttribute="leading" secondItem="ZIz-u1-M9l" secondAttribute="leading" constant="20" id="GUb-kx-3II"/>
+                        <constraint firstAttribute="trailing" secondItem="yQg-rC-wH0" secondAttribute="trailing" constant="8" id="JIL-yB-t3q"/>
+                        <constraint firstAttribute="trailing" secondItem="s2n-CI-Qin" secondAttribute="trailing" constant="10" id="PP8-XH-d9k"/>
+                        <constraint firstItem="mUh-gP-A58" firstAttribute="top" secondItem="ZIz-u1-M9l" secondAttribute="top" constant="10" id="Qbw-F6-kUJ"/>
+                        <constraint firstItem="UuS-dg-UPf" firstAttribute="top" secondItem="yQg-rC-wH0" secondAttribute="bottom" constant="8" id="Sjd-mk-PeE"/>
+                        <constraint firstItem="l18-vU-I9r" firstAttribute="width" secondItem="UuS-dg-UPf" secondAttribute="width" id="Sn6-3W-sKM"/>
+                        <constraint firstItem="l18-vU-I9r" firstAttribute="centerY" secondItem="UuS-dg-UPf" secondAttribute="centerY" id="TGc-Gd-DGA"/>
+                        <constraint firstItem="wTr-ko-67L" firstAttribute="top" secondItem="s2n-CI-Qin" secondAttribute="bottom" constant="1" id="UCW-B3-KuO"/>
+                        <constraint firstItem="wTr-ko-67L" firstAttribute="trailing" secondItem="s2n-CI-Qin" secondAttribute="trailing" id="UJA-31-mRn"/>
+                        <constraint firstItem="j2v-r0-uss" firstAttribute="centerY" secondItem="UuS-dg-UPf" secondAttribute="centerY" id="YKr-Bz-o8G"/>
+                        <constraint firstItem="6v5-h1-1LO" firstAttribute="width" secondItem="UuS-dg-UPf" secondAttribute="width" id="cG0-O9-Avf"/>
+                        <constraint firstItem="yQg-rC-wH0" firstAttribute="top" secondItem="ZIz-u1-M9l" secondAttribute="top" constant="2" id="eJE-4b-Nu2"/>
+                        <constraint firstItem="k41-jU-Lg1" firstAttribute="trailing" secondItem="s2n-CI-Qin" secondAttribute="trailing" id="jDB-SN-xtt"/>
+                        <constraint firstItem="yQg-rC-wH0" firstAttribute="leading" secondItem="ZIz-u1-M9l" secondAttribute="leading" constant="10" id="kqG-wl-7eP"/>
+                        <constraint firstItem="j2v-r0-uss" firstAttribute="leading" secondItem="l18-vU-I9r" secondAttribute="trailing" constant="10" id="l7b-bB-Oom"/>
+                        <constraint firstItem="s2n-CI-Qin" firstAttribute="top" secondItem="ZIz-u1-M9l" secondAttribute="top" constant="20" id="nhw-IF-3c8"/>
+                        <constraint firstItem="wTr-ko-67L" firstAttribute="leading" secondItem="s2n-CI-Qin" secondAttribute="leading" id="otW-kV-Y7s"/>
+                        <constraint firstItem="s2n-CI-Qin" firstAttribute="leading" secondItem="mUh-gP-A58" secondAttribute="trailing" constant="6" id="tXK-7r-LRU"/>
+                        <constraint firstItem="l18-vU-I9r" firstAttribute="leading" secondItem="6v5-h1-1LO" secondAttribute="trailing" constant="10" id="tgD-rF-0Mi"/>
+                        <constraint firstAttribute="trailing" secondItem="j2v-r0-uss" secondAttribute="trailing" constant="10" id="uOy-p8-l7Y"/>
                         <constraint firstAttribute="height" constant="131" id="vQo-sS-fJE"/>
+                        <constraint firstItem="mUh-gP-A58" firstAttribute="leading" secondItem="ZIz-u1-M9l" secondAttribute="leading" constant="10" id="wwp-xJ-gLB"/>
+                        <constraint firstItem="6v5-h1-1LO" firstAttribute="centerY" secondItem="UuS-dg-UPf" secondAttribute="centerY" id="yPv-VG-4kD"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="10"/>
+                            <integer key="value" value="5"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                     </userDefinedRuntimeAttributes>
