--- a/FindElectricity/FEMap/View/FELauchShow.xib
+++ b/FindElectricity/FEMap/View/FELauchShow.xib
@@ -70,8 +70,8 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="map_redbag" translatesAutoresizingMaskIntoConstraints="NO" id="zDd-xW-ROK">
-                    <rect key="frame" x="104" y="165" width="181" height="109"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="map_launch" translatesAutoresizingMaskIntoConstraints="NO" id="zDd-xW-ROK">
+                    <rect key="frame" x="120" y="189" width="135" height="111"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
             </subviews>
@@ -85,6 +85,6 @@
         </view>
     </objects>
     <resources>
-        <image name="map_redbag" width="50" height="60"/>
+        <image name="map_launch" width="135" height="111"/>
     </resources>
 </document>
