--- a/FindElectricity/FEMine/ViewController/FEChangePhoneViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FEChangePhoneViewController.xib
@@ -10,6 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FEChangePhoneViewController">
             <connections>
+                <outlet property="msCode" destination="lm4-NA-x20" id="Wd1-KW-6Al"/>
+                <outlet property="phone" destination="KMn-fq-A27" id="K6L-oI-vOv"/>
+                <outlet property="sendCode" destination="Zde-R9-YMz" id="0d1-Dn-VPd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -42,15 +45,19 @@
                             <color key="backgroundColor" red="0.015686274510000001" green="0.73333333329999995" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <state key="normal" title="发送验证码"/>
+                            <state key="disabled" title="发送中"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                     <integer key="value" value="2"/>
                                 </userDefinedRuntimeAttribute>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="sendMsCode:" destination="-1" eventType="touchUpInside" id="XqE-3V-Ze8"/>
+                            </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBrownColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
