--- a/FindElectricity/FEMine/ViewController/FESettingsViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FESettingsViewController.xib
@@ -37,6 +37,9 @@
                     <state key="normal" title="退出登录">
                         <color key="titleColor" red="0.25098039215686274" green="0.25098039215686274" blue="0.25098039215686274" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="logoutAct:" destination="-1" eventType="touchUpInside" id="2xB-0V-lMp"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
