--- a/FindElectricity/FEMine/ViewController/FEShopJionViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FEShopJionViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FEShopJionViewController">
             <connections>
+                <outlet property="tableView" destination="wc5-21-cRy" id="bmQ-lP-Fah"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
